--- a/GitDemo.html
+++ b/GitDemo.html
@@ -1,9 +1,9 @@
 <DOCTYPE html>
 <html>
     <head>
-        <title>My HomePage</title>>
-    </head>>
+        <title>My HomePage</title>
+    </head>
     <body>
-        Hello World!
-    </body>>
-</html>>
+        Hello World! Heloooo
+    </body>
+</html>
