--- a/GitDemo.html
+++ b/GitDemo.html
@@ -4,6 +4,6 @@
         <title>My HomePage</title>
     </head>
     <body>
-        Hello World! Heloooo
+        Hello World! Heloooo, testing cnflict
     </body>
 </html>
